# thss-2025-compiler

./: .gitignore
pa1/: SysYLexer.g4  SysYLexer.interp  SysYLexer.tokens
pa2/: readme.md
pa2/src/: DragonLexer.cpp  Lexer.cpp  Token.cpp  Token.hpp
pa3/: .gitignore  CMakeLists.txt  Makefile  SysYLexer.g4  SysYLexer.java  SysYParser.g4  package.py  run-test.py  test.c
pa3/include/: SysYFormatter.h
pa3/src/: SysYFormatter.cpp  SysYFormatter.h  SysYLexer.cpp  SysYLexer.h  SysYParser.cpp  SysYParser.h  SysYParser.interp  SysYParserBaseVisitor.h  SysYParserVisitor.h  main.cpp
pa3/test/resources/: array.ans  array.c  block.ans  block.c  break.ans  break.c  example.ans  example.c  statement.ans  statement.c
pa4/: .gitignore  CMakeLists.txt  Calculator.g4  Makefile  package.py  run-test.py
pa4/include/: InterpreterVisitor.h  SymbolTable.h
pa4/src/: InterpreterVisitor.cpp  SymbolTable.cpp  main.cpp
pa4/src/antlr/: Calculator.interp  Calculator.tokens  CalculatorBaseVisitor.cpp  CalculatorBaseVisitor.h  CalculatorLexer.cpp  CalculatorLexer.h  CalculatorLexer.interp  CalculatorParser.cpp  CalculatorParser.h  CalculatorVisitor.cpp  CalculatorVisitor.h
pa4/test/resources/: example1.ans  example1.in  example2.ans  example2.in  example3.ans  example3.in
pa5/: 1.asm  2.asm  3.asm
pa6/: 1.asm  2.asm  3.asm  readme.md
